--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
-<header>
+
+<head>
     <link rel="stylesheet" href="vendors/css/normalize.css" type="text/css">
     <link rel="stylesheet" href="vendors/css/grid.css" type="text/css">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400" rel="stylesheet">
     <title>OmniFood</title>
-</header>
+</head>
 
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <img src="resources/img/logo-white.png" alt="OmniFood Logo" class="logo">
+                <ul class="main-nav">
+                    <li><a href="#">Food delivery</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Our cities</a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+        </nav>
+
         <div class="hero-text-box">
             <h1>GOODBYE JUNK FOOD.<br>HELLO SUPER HEALTHY MEALS.</h1>
             <a class="btn btn-full" href="#">I'm hungry</a>
