--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="vendors/css/normalize.css" type="text/css">
     <link rel="stylesheet" href="vendors/css/grid.css" type="text/css">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="vendors/css/ionicons.min.css" type="text/css">
+
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400" rel="stylesheet">
     <title>OmniFood</title>
 </head>
@@ -27,9 +29,47 @@
             <h1>GOODBYE JUNK FOOD.<br>HELLO SUPER HEALTHY MEALS.</h1>
             <a class="btn btn-full" href="#">I'm hungry</a>
             <a class="btn btn-ghost" href=" # ">Show me more</a>
-
         </div>
     </header>
+
+    <section class="section-features">
+        <div class="row">
+            <h2>Get food fast &mdash; not fast food</h2>
+            <p class="long-copy">
+                Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. So let us take care of that, we&#39;re really good at it, we promise!
+            </p>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4">
+                <i class="ion-ios-infinite-outline"></i>
+                <h3>Up to 365 days/year</h3>
+                <p>
+                    Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
+                </p>
+            </div>
+            <div class="col span_1_of_4">
+                <i class="ion-ios-clock-outline"></i>
+
+                <h3>Ready in 20 minutes</h3>
+                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+                </p>
+            </div>
+            <div class="col span_1_of_4">
+                <i class="ion-ios-nutrition-outline"></i>
+
+                <h3>100% organic</h3>
+                <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
+                </p>
+            </div>
+            <div class="col span_1_of_4">
+                <i class="ion-ios-cart-outline"></i>
+
+                <h3>Order anything</h3>
+                <p> We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
+                </p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
