--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
             </p>
         </div>
         <div class="row">
-            <div class="col span_1_of_4">
-                <i class="ion-ios-infinite-outline"></i>
+            <div class="col span_1_of_4 box">
+                <i class="ion-ios-infinite-outline big-icon"></i>
                 <h3>Up to 365 days/year</h3>
                 <p>
                     Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
                 </p>
             </div>
-            <div class="col span_1_of_4">
-                <i class="ion-ios-clock-outline"></i>
+            <div class="col span_1_of_4 box">
+                <i class="ion-ios-clock-outline big-icon"></i>
 
                 <h3>Ready in 20 minutes</h3>
                 <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
-            <div class="col span_1_of_4">
-                <i class="ion-ios-nutrition-outline"></i>
+            <div class="col span_1_of_4 box">
+                <i class="ion-ios-nutrition-outline big-icon"></i>
 
                 <h3>100% organic</h3>
                 <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
                 </p>
             </div>
-            <div class="col span_1_of_4">
-                <i class="ion-ios-cart-outline"></i>
+            <div class="col span_1_of_4 box">
+                <i class="ion-ios-cart-outline big-icon"></i>
 
                 <h3>Order anything</h3>
                 <p> We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
